--- a/README
+++ b/README
@@ -1,1 +1,9 @@
+Hello There,
 
+Here is the source code for my website: [sommmtoooo.vercel.app](https://sommmtoooo.vercel.app)
+
+
+> Built With: **NextJS**, **Markdown**, **TailwindCSS**
+
+
+Feel free to fork this if you want :)
